[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/WeaponRay.gd" type="Script" id=2]
[ext_resource path="res://Player/WeaponMelee.gd" type="Script" id=3]
[ext_resource path="res://Player/WeaponBullet.gd" type="Script" id=4]

[sub_resource type="CapsuleShape" id=1]

radius = 1.2
height = 9.0
_sections_unfolded = [ "Resource" ]

[sub_resource type="CubeMesh" id=2]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector3( 2, 2, 2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="SpatialMaterial" id=7]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 0.722656, 0.58063, 0.398026, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo" ]

[sub_resource type="CubeMesh" id=3]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector3( 0.5, 0.2, 0.2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="SpatialMaterial" id=6]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 0.260651, 0.263403, 0.304688, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo" ]

[sub_resource type="Animation" id=5]

resource_name = "Shoot"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 6.23994, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="BoxShape" id=4]

extents = Vector3( 1.5, 2, 1.5 )

[node name="Player" type="KinematicBody" index="0"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 22
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 6, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Pause", "Transform", "Visibility" ]

[node name="RotationHelper" type="Spatial" parent="." index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Model" type="Spatial" parent="RotationHelper" index="0"]

editor/display_folded = true

[node name="RHand" type="Spatial" parent="RotationHelper/Model" index="0"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.241205, -0.19157, 0.381986 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Hand" type="MeshInstance" parent="RotationHelper/Model/RHand" index="0"]

editor/display_folded = true
transform = Transform( 0.02, 0, 0, 0, 0.0493844, 0.00625738, 0, -0.00782172, 0.0395075, 0, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = SubResource( 7 )
_sections_unfolded = [ "Transform", "material" ]

[node name="MeshInstance" type="MeshInstance" parent="RotationHelper/Model/RHand/Hand" index="0"]

transform = Transform( 0.700386, 0, -2.51234, 0, 1, 0, 1.59102, 0, 0.335881, 0.587544, 1.10172, 0.721685 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = SubResource( 7 )
_sections_unfolded = [ "material" ]

[node name="MeshInstance2" type="MeshInstance" parent="RotationHelper/Model/RHand/Hand" index="1"]

editor/display_folded = true
transform = Transform( 2.95207, 0.0897393, -0.254184, -0.191444, 0.211114, -1.5049, -0.0515409, 0.89765, 0.307115, 0.910566, 0.908813, 1.15959 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = SubResource( 7 )
_sections_unfolded = [ "material" ]

[node name="MeshInstance3" type="MeshInstance" parent="RotationHelper/Model/RHand/Hand/MeshInstance2" index="0"]

transform = Transform( -0.229722, 0.542244, -0.108678, -1.72278, -0.240077, -0.116477, -0.117858, 0.0668792, 0.989316, 0.236089, -0.346245, -0.078598 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = SubResource( 7 )
_sections_unfolded = [ "material" ]

[node name="MeshInstance3" type="MeshInstance" parent="RotationHelper/Model/RHand/Hand" index="2"]

editor/display_folded = true
transform = Transform( 2.95207, 0.0897393, -0.254184, -0.191444, 0.211114, -1.5049, -0.0515409, 0.89765, 0.307115, 0.910566, 0.45874, 1.15959 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = SubResource( 7 )
_sections_unfolded = [ "material" ]

[node name="MeshInstance3" type="MeshInstance" parent="RotationHelper/Model/RHand/Hand/MeshInstance3" index="0"]

transform = Transform( -0.229722, 0.542244, -0.108678, -1.72278, -0.240077, -0.116477, -0.117858, 0.0668792, 0.989316, 0.236089, -0.346245, -0.078598 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = SubResource( 7 )
_sections_unfolded = [ "material" ]

[node name="MeshInstance4" type="MeshInstance" parent="RotationHelper/Model/RHand/Hand" index="3"]

editor/display_folded = true
transform = Transform( 2.95207, 0.0897393, -0.254184, -0.191444, 0.211114, -1.5049, -0.0515409, 0.89765, 0.307115, 0.910566, -0.0503235, 1.15959 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = SubResource( 7 )
_sections_unfolded = [ "material" ]

[node name="MeshInstance3" type="MeshInstance" parent="RotationHelper/Model/RHand/Hand/MeshInstance4" index="0"]

transform = Transform( -0.229722, 0.542244, -0.108678, -1.72278, -0.240077, -0.116477, -0.117858, 0.0668792, 0.989316, 0.236089, -0.346245, -0.078598 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = SubResource( 7 )
_sections_unfolded = [ "material" ]

[node name="MeshInstance5" type="MeshInstance" parent="RotationHelper/Model/RHand/Hand" index="4"]

editor/display_folded = true
transform = Transform( 2.95207, 0.0897393, -0.254184, -0.191444, 0.211114, -1.5049, -0.0515409, 0.89765, 0.307115, 0.721896, -0.498093, 1.15959 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = SubResource( 7 )
_sections_unfolded = [ "material" ]

[node name="MeshInstance3" type="MeshInstance" parent="RotationHelper/Model/RHand/Hand/MeshInstance5" index="0"]

transform = Transform( -0.229722, 0.542244, -0.108678, -1.72278, -0.240077, -0.116477, -0.117858, 0.0668792, 0.989316, 0.236089, -0.346245, -0.078598 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = SubResource( 7 )
_sections_unfolded = [ "material" ]

[node name="Fan" type="Spatial" parent="RotationHelper/Model/RHand" index="1"]

editor/display_folded = true
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.0147404, 0.0599508, 0.0132073 )
_sections_unfolded = [ "Transform" ]

[node name="Fire" type="MeshInstance" parent="RotationHelper/Model/RHand/Fan" index="0"]

transform = Transform( 0.0168277, 0, 0, 0, 0.00541414, 0.0341182, 0, -0.00159432, 0.115862, 0.027842, 0.0332537, 0.142505 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = SubResource( 6 )
_sections_unfolded = [ "Transform", "material" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="RotationHelper/Model/RHand" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Shoot = SubResource( 5 )
blend_times = [  ]

[node name="Camera" type="Camera" parent="RotationHelper" index="1"]

transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 0, 0, 0 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 60.0
size = 1.0
near = 0.05
far = 1000.0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Flashlight" type="SpotLight" parent="RotationHelper" index="2"]

transform = Transform( 1, 0, 0, 0, -1, -8.74228e-008, 0, 8.74228e-008, -1, 0, 0, 0 )
layers = 1
light_color = Color( 0.764706, 0.988235, 1, 1 )
light_energy = 0.7
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 8.0
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 100.0
spot_attenuation = 2.0
spot_angle = 60.0
spot_angle_attenuation = 1.0
_sections_unfolded = [ "Spot", "Transform" ]

[node name="GunFirePoints" type="Spatial" parent="RotationHelper" index="3"]

editor/display_folded = true

[node name="RayFire" type="Spatial" parent="RotationHelper/GunFirePoints" index="0"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.5 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="RayCast" type="RayCast" parent="RotationHelper/GunFirePoints/RayFire" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
enabled = false
exclude_parent = true
cast_to = Vector3( 0, 0, 200 )
collision_mask = 6
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="MeleeFire" type="Spatial" parent="RotationHelper/GunFirePoints" index="1"]

editor/display_folded = true
script = ExtResource( 3 )

[node name="Area" type="Area" parent="RotationHelper/GunFirePoints/MeleeFire" index="0"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.3, 4 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 8
collision_mask = 6
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Audio Bus", "Collision", "Reverb Bus", "Transform", "Visibility" ]

[node name="CollisionShape" type="CollisionShape" parent="RotationHelper/GunFirePoints/MeleeFire/Area" index="0"]

shape = SubResource( 4 )
disabled = false

[node name="BulletFire" type="Spatial" parent="RotationHelper/GunFirePoints" index="2"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.5 )
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="FirePos" type="Spatial" parent="RotationHelper/GunFirePoints/BulletFire" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.382728, -0.218971, -2.15511 )


